--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
       <img class="footer-logo" src="imagenes/icono-blanco.svg" alt="Logo del portafolio">
       <p class="footer-texto text-center">Aprendo y creo todos los días.<br>Creemos un proyecto juntos.</p>
       <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
-        <a href="https://twitter.com/freecodecampES" target="_blank" rel="noopener noreferrer">
+        <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-twitter"></i>
         </a>
         <a href="https://github.com/TBrizuela/Turismo.git" target="_blank" rel="noopener noreferrer">
