--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
         <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-instagram"></i>
         </a>
-        <a href="#" target="_top" rel="noopener noreferrer">
+        <a href="#" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-envelope"></i>
         </a>
       </div>
